# slicer-uri-bridge

./: .gitignore  LICENSE  README.md  install-macos.sh  install-windows.ps1  pyproject.toml
.github/workflows/: ci.yml
src/slicer_uri_bridge/: __init__.py  __main__.py  cli.py  config.py  handler.py  manager.py
src/slicer_uri_bridge/resources/: default_config.toml  macos-launcher.applescript
tests/: test_cli.py  test_core.py  test_handler.py  test_manager_linux.py  test_manager_macos.py
